42.New private Government type (Profession) for class clans.  Make sure you add CLASSCLAN to the new MAXCLANCATS ini entry.
43.PlayerClass (the class used when you disable CLASSES) now uses a programmatically defined skill tree.
# Build 5.8.0 Release ?/?/2013
1. CoffeeMud and MiniWebServer are now integrated -- this means a much faster and better web service all around.
^^^Check out the altered WebServer guide, and make sure you integrate the pub.ini, admin.ini, and common.ini if you customized them.
2. Character Classes now use formulas for mana, movement, and hit point gains/losses.
3. Character Class race/stat requirements can now be modified separately from qualifications mask.  Race qualifications shown in help now.
4. Changed the wysiwyg forum editor to one that's also chrome compatible (nicEdit)
5. Generic Abilities will now import/export when races that use them export
6. (Internal) New factions now default into /resources/factions -- legacy locations will work too though.
7. New Channel flag (ACCOUNTOOC) to force account names instead of channel names into messages.
8. (Internal) randomdata.xml now at /resources/randareas/example.xml -- update your random area files and random Areas!
9. Logging to separate files now has more options, such as rolling logs based on entries or bytes, etc.
10.Web Forum system now supports participation by empty Accounts (if using the account system), and web subscribe/unsubscribe
11.Consolidated Session and Tick threads: check new coffeemud.ini file for new MAXWORKERTHREADS and MINWORKERTHREADS. Major drop in thread usage!
12.Control Panel now supports debug flags, and the whole flag business has been put into its own "Tab"
13.Web Server now supports @for?@ @next@ loops! See the web server guide for usage, or checkout an example in control.cmvp
14.Control Panel "Channels" editor is now much friendlier and easy to use.
*** Add Async Prompting guide to the programmer's guide